<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".leerPref">

    <Button
        android:id="@+id/leer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer1" />

    <Button
        android:id="@+id/leer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer2" />

    <Button
        android:id="@+id/leer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leer3" />

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>